Fix masthead font size on small viewports

--- a/client/src/components/main/main.css
+++ b/client/src/components/main/main.css
@@ -62,6 +62,16 @@
   }
 }
 
+@media screen and (max-width: 480px) {
+  .custom-logo-font {
+    font-size: 3em !important;
+  }
+
+  .tagline {
+    font-size: 1.5em;
+  }
+}
+
 /* ************************************ */
 /* RESPONSIVE HERO IMAGES */
 /* ************************************ */
